# napari-sif-reader

./: LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_sif_reader/: __init__.py  _reader.py  napari.yaml
src/napari_sif_reader/_tests/: test_reader.py  test_sample_data.py
