[metadata]
name = napari-sif-reader
version = 0.0.1
description = This is a simple wraper to read .sif format files from Andor Technology.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rjlopez2/napari-sif-reader
author = Ruben Lopez
author_email = rjlopez2@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/rjlopez2/napari-sif-reader/issues
    Documentation = https://github.com/rjlopez2/napari-sif-reader#README.md
    Source Code = https://github.com/rjlopez2/napari-sif-reader
    User Support = https://github.com/rjlopez2/napari-sif-reader/issues

[options]
packages = find:
install_requires =
    numpy
    sif_parser

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-sif-reader = napari_sif_reader:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pillow # requires this to run sif test


[options.package_data]
* = *.yaml
